# CS521_mp1

./: CMakeLists.txt  CMakeLists_apple.txt  README.md  cloud_readme.md  gemm_cpu.cpp  gemm_gpu.cu  utils.h
cpu/: CMakeLists.txt  gemm_cpu.cpp
gpu/: CMakeLists.txt  gemm_gpu.cu
include/: utils.h
npu/: README.md  cloud_readme.md  conv_npu.py  conv_numpy.py  test_harness.py
report/: mp1-report-structure.docx
